# tcad

./: CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  geometry.rs  history.rs  mesh.rs  mod.rs  pattern.rs  project.rs
src-tauri/src/engine/: export.rs  history.rs  mod.rs  pattern_piece.rs  project.rs  seam.rs  validation.rs
src-tauri/src/geometry/: bbox.rs  intersection.rs  mod.rs  tessellation.rs  transform.rs  vec2.rs  vec3.rs
src-tauri/src/mesh/: generator.rs
src-tauri/src/types/: error.rs  mesh.rs  mod.rs  pattern.rs
src/components/: component-example.tsx  theme-toggle.tsx  update-dialog.tsx
src/components/layout/: center-workspace.tsx  properties-sidebar.tsx  status-bar.tsx  tool-defs.ts  tool-sidebar.tsx  toolbar.tsx
src/components/providers/: theme-provider.tsx  tool-provider.tsx  workspace-provider.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  checkbox.tsx  combobox.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  popover.tsx  select.tsx  sheet.tsx  sidebar.tsx  switch.tsx  (+1 more)
src/contexts/: tool-context.ts  workspace-context.ts
src/hooks/: use-selection.ts  use-theme.ts  use-tool.ts  use-updater.ts  use-workspace.ts
src/lib/: invoke.ts  query-client.ts  query-keys.ts
src/stores/: project-store.ts  selection-store.ts  tool-store.ts  workspace-store.ts
src/types/: mesh.ts  pattern.ts
(+31 files in other folders)
