[package]
name = "tcad"
version = "0.6.0"
description = "Desktop 2D/3D garment pattern CAD"
authors = ["eggfriedrice24"]
license = "MIT"
edition = "2021"
repository = "https://github.com/eggfriedrice24/tcad"

[lib]
name = "tcad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
lyon_tessellation = "1"
lyon_path = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
printpdf = "0.7"
